# ADDED --------------------------------------- * file: icon tutorial * why: scrollbar bug * what: added placeholder container

--- a/src/app/views/icon-tutorial/icon-tutorial.component.scss
+++ b/src/app/views/icon-tutorial/icon-tutorial.component.scss
@@ -6,6 +6,10 @@
 {
     margin: 20px 0 20px 0;
 }
+.scroll-fix
+{
+    height: 60px;
+}
 .icon-list
 {
     padding: 0;
